# py-az-mcp

./: README.md  create_service_principal.py  main.py  pyproject.toml  server-azure.py
